--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "@websanova/vue-auth": "^2.21.10-beta",
+    "axios": "^0.18.0",
     "bootstrap": "^4.0.0-beta.2",
     "chartist": "^0.11.0",
     "es6-promise": "^4.1.1",
     "google-maps": "^3.2.1",
     "v-tooltip": "^2.0.0-rc.1",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.1",
     "vue-clickaway": "^2.1.0",
     "vue-notifyjs": "^0.2.0",
     "vue-router": "^3.0.1",
