--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue": "^2.5.2",
     "vue-axios": "^2.1.1",
     "vue-clickaway": "^2.1.0",
+    "vue-lodash": "^2.0.0",
     "vue-notifyjs": "^0.2.0",
     "vue-router": "^3.0.1",
     "vue2-google-maps": "^0.8.4"
