vue-sweetalert2 + vue-datetime-picker + vue-wysiwyg installed

--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "vue": "^2.5.2",
     "vue-axios": "^2.1.1",
     "vue-clickaway": "^2.1.0",
+    "vue-datetime-picker": "^0.2.1",
     "vue-lodash": "^2.0.0",
     "vue-notifyjs": "^0.2.0",
     "vue-router": "^3.0.1",
+    "vue-sweetalert2": "^1.2.4",
+    "vue-wysiwyg": "^1.7.0",
     "vue2-google-maps": "^0.8.4"
   },
   "devDependencies": {
