address component created

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-clickaway": "^2.1.0",
     "vue-datetime-picker": "^0.2.1",
     "vue-lodash": "^2.0.0",
+    "vue-multiselect": "^2.1.0",
     "vue-notifyjs": "^0.2.0",
     "vue-router": "^3.0.1",
     "vue-sweetalert2": "^1.2.4",
