--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-clickaway": "^2.1.0",
     "vue-datetime": "^1.0.0-beta.3",
     "vue-lodash": "^2.0.0",
+    "vue-moment": "^4.0.0-0",
     "vue-multiselect": "^2.1.0",
     "vue-notifyjs": "^0.2.0",
     "vue-router": "^3.0.1",
