--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@websanova/vue-auth": "^2.21.10-beta",
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0-beta.2",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "chartist": "^0.11.0",
     "es6-promise": "^4.1.1",
     "google-maps": "^3.2.1",
