--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue-router": "^3.0.1",
     "vue-sweetalert2": "^1.2.4",
     "vue-wysiwyg": "^1.7.0",
+    "vue2-autocomplete-js": "^0.2.2",
     "vue2-google-maps": "^0.8.4",
     "weekstart": "^1.0.0"
   },
